[FIX] html_editor: properly align list markers with text content
**Problem**:
After introducing "Text Align," list markers (`::marker`) are not
properly aligned when changing text alignment. This happens because
`list-style-position: outside` keeps markers outside `li`, and
`text-align: center;` does not affect `::marker`. Since `li` has
`width: 100%`, markers always remain left-aligned.

**Solution**:
- Set `width: fit-content` for `li`.
- Calculate `min-width` when adding a "hint."
- Use `flex` to align `li` inside `ol, ul`.

**Steps to Reproduce**:
1. Add text.
2. Align text to center.
3. Convert text to a bullet list.
   - **Issue**: `::marker` remains left-aligned instead of centering.

**opw-4639049**

--- a/addons/html_editor/static/src/main/list/list.scss
+++ b/addons/html_editor/static/src/main/list/list.scss
@@ -2,10 +2,18 @@ li p {
     margin-bottom: 0px;
 }
 
+*[contenteditable="true"] {
+    ul, ol {
+        li {
+            max-width: fit-content;
+            text-align: start;
+        }
+    }
+}
+
 // Checklist
 ul.o_checklist {
     > li {
-        list-style: none;
         position: relative;
         margin-left: 20px;
 
